--- a/projects/mona-ui/src/lib/layout/stepper/components/stepper/stepper.component.scss
+++ b/projects/mona-ui/src/lib/layout/stepper/components/stepper/stepper.component.scss
@@ -1,21 +1,11 @@
 $step-width: 32px;
 $step-height: 32px;
 
-div.mona-stepper {
-    position: relative;
-    width: auto;
-    display: grid;
-    outline: none;
-    &-vertical {
-        height: 100%;
-    }
-}
-
-div.mona-stepper-horizontal {
+.mona-stepper-horizontal {
     margin-top: calc($step-height / -2);
 }
 
-ol.mona-stepper-step-list {
+.mona-stepper-step-list {
     position: absolute;
     display: flex;
     list-style: none;
@@ -76,7 +66,7 @@ ol.mona-stepper-step-list {
     }
 }
 
-div.mona-stepper-track {
+.mona-stepper-track {
     position: relative;
     display: grid;
     background-color: var(--mona-background);
