--- a/projects/mona-ui/src/lib/layout/tab-strip/components/tab-strip/tab-strip.component.scss
+++ b/projects/mona-ui/src/lib/layout/tab-strip/components/tab-strip/tab-strip.component.scss
@@ -1,22 +1,15 @@
-div.mona-tab-strip {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-div.mona-tab-strip-tabs {
+.mona-tab-strip-tabs {
     width: 100%;
     display: flex;
 }
 
-div.mona-tab-list-wrapper {
+.mona-tab-list-wrapper {
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
 
-ul.mona-tab-list {
+.mona-tab-list {
     list-style-type: none;
     height: 100%;
     display: flex;
@@ -43,11 +36,11 @@ ul.mona-tab-list {
     }
 }
 
-div.mona-tab-title {
+.mona-tab-title {
     padding: 6px 10px 4px;
 }
 
-div.mona-tab-strip-scroll {
+.mona-tab-strip-scroll {
     height: 100%;
     display: flex;
     align-items: center;
@@ -63,12 +56,12 @@ div.mona-tab-strip-scroll {
     }
 }
 
-div.mona-tab-content {
+.mona-tab-content {
     width: 100%;
     overflow: auto;
     flex: 1;
 }
 
-div.mona-tab-hidden {
+.mona-tab-hidden {
     display: none;
 }
