--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1479,17 +1479,21 @@ button[monaButton].mona-input-button {
 }
 
 /** Tab Strip */
-div.mona-tab-strip {
+.mona-tab-strip {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     border: 1px solid var(--mona-border-color);
 }
-div.mona-tab-strip-tabs {
+.mona-tab-strip-tabs {
     background: 1px solid var(--mona-background-dark);
     border-bottom: 1px solid var(--mona-border-color);
 }
-div.mona-tab-list-wrapper {
+.mona-tab-list-wrapper {
     background: var(--mona-background-dark);
 }
-ul.mona-tab-list {
+.mona-tab-list {
     @include font-medium;
     & li {
         color: var(--mona-text);
@@ -1506,7 +1510,7 @@ ul.mona-tab-list {
         }
     }
 }
-div.mona-tab-strip-scroll {
+.mona-tab-strip-scroll {
     background: var(--mona-background-dark);
     color: var(--mona-text);
     & button[monaButton] {
