refactor: list view style updates

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -628,7 +628,7 @@
                                                 [selectedKeys]="listViewSelectedKeys" selectionKey="text"
                                                 (selectedKeysChange)="onListViewSelectionChange($event)"
                                                 [monaListViewNavigable]="{wrap: true}"
-                                                style="height: 350px; width: 350px;">
+                                                style="width: 350px;">
                                     <ng-template monaListViewHeaderTemplate>
                                         <div style="padding: 4px 8px; font-weight: 600; border-bottom: 1px solid var(--mona-border-color);">List of Products</div>
                                     </ng-template>
