--- a/projects/mona-ui/src/lib/list-view/components/list-view/list-view.component.scss
+++ b/projects/mona-ui/src/lib/list-view/components/list-view/list-view.component.scss
@@ -1,17 +1,4 @@
-:host {
-    display: block;
-}
-
-div.mona-list-view {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    outline: none;
-    overflow: hidden;
-}
-
-div.mona-list-container {
+.mona-list-container {
     flex: 1;
     overflow: hidden;
 }
@@ -21,6 +8,6 @@ div.mona-list-container {
     height: 100%;
 }
 
-div.mona-list-view-pager {
+.mona-list-view-pager {
     border-top: 1px solid var(--mona-border-color);
 }
