--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1586,6 +1586,12 @@ button[monaButton].mona-input-button {
 
 /** List View */
 .mona-list-view {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    outline: none;
+    overflow: hidden;
     @include font-medium;
     color: var(--mona-text);
     background: var(--mona-background);
