--- a/projects/mona-ui/src/lib/menus/context-menu-item/context-menu-item.component.scss
+++ b/projects/mona-ui/src/lib/menus/context-menu-item/context-menu-item.component.scss
@@ -1,4 +1,4 @@
-div.mona-contextmenu-item {
+.mona-contextmenu-item {
     width: 100%;
     height: 100%;
     display: flex;
@@ -45,7 +45,7 @@ div.mona-contextmenu-item {
     }
 }
 
-span.divider {
+.divider {
     display: block;
     height: 1px;
     width: 100%;
