refactor: menubar style updates

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -125,7 +125,7 @@
                                     <mona-menu-item text="New"></mona-menu-item>
                                     <mona-menu-item text="Open"></mona-menu-item>
                                     <mona-menu-item text="Save"></mona-menu-item>
-                                    <mona-menu-item text="Save As"></mona-menu-item>
+                                    <mona-menu-item text="Save As" [disabled]="true"></mona-menu-item>
                                     <mona-menu-item text="Exit">
                                         <ng-template monaMenuItemTextTemplate>
                                             <span
