--- a/projects/mona-ui/src/lib/navigation/breadcrumb/components/breadcrumb/breadcrumb.component.html
+++ b/projects/mona-ui/src/lib/navigation/breadcrumb/components/breadcrumb/breadcrumb.component.html
@@ -1,17 +1,24 @@
-<ol class="mona-breadcrumb">
-    <ng-container *ngFor="let item of breadcrumbItems(); let ix = index;">
+<ol class="mona-breadcrumb-list">
+    @for (item of items(); track item) {
         <li class="mona-breadcrumb-item" [title]="item.title"
             [ngClass]="{'mona-disabled': item.disabled}" (click)="onItemClick(item)">
-            <span class="mona-breadcrumb-item-text" *ngIf="!itemTemplate">{{item.text}}</span>
-            <ng-container [ngTemplateOutlet]="itemTemplate?.template??null"
-                          [ngTemplateOutletContext]="{$implicit: item}" *ngIf="itemTemplate"></ng-container>
+
+            @if (itemTemplate) {
+                <ng-container [ngTemplateOutlet]="itemTemplate.template" [ngTemplateOutletContext]="{$implicit: item}"></ng-container>
+            } @else {
+                <span class="mona-breadcrumb-item-text">{{ item.text }}</span>
+            }
         </li>
-        <li class="mona-breadcrumb-separator" *ngIf="ix < breadcrumbItems().length - 1">
-            <span class="mona-breadcrumb-separator-icon" *ngIf="!separatorTemplate">
-                <fa-icon [icon]="separator"></fa-icon>
-            </span>
-            <ng-container [ngTemplateOutlet]="separatorTemplate?.template??null"
-                          [ngTemplateOutletContext]="{$implicit: item}" *ngIf="separatorTemplate"></ng-container>
-        </li>
-    </ng-container>
+
+        @if ($index < items().length - 1) {
+            <li class="mona-breadcrumb-separator">
+                @if (separatorTemplate) {
+                    <ng-container [ngTemplateOutlet]="separatorTemplate.template"
+                                  [ngTemplateOutletContext]="{$implicit: item}"></ng-container>
+                } @else {
+                    <fa-icon [icon]="separator"></fa-icon>
+                }
+            </li>
+        }
+    }
 </ol>
