refactor: notification style updates

--- a/projects/mona-ui/src/lib/notification/components/notification-container/notification-container.component.html
+++ b/projects/mona-ui/src/lib/notification/components/notification-container/notification-container.component.html
@@ -1,4 +1,3 @@
-<div class="wrapper mona-notification-container"
-     [ngClass]="{'bottomleft':position==='bottomleft', 'bottomright': position==='bottomright', 'topleft':position==='topleft', 'topright': position==='topright'}">
-    <mona-notification *ngFor="let notificationData of notificationDataList; trackBy: trackByFn;" [data]="notificationData"></mona-notification>
-</div>
+@for (notificationData of notificationDataList(); track $index) {
+    <mona-notification [data]="notificationData"></mona-notification>
+}
