--- a/projects/mona-ui/src/lib/notification/components/notification/notification.component.scss
+++ b/projects/mona-ui/src/lib/notification/components/notification/notification.component.scss
@@ -1,4 +1,4 @@
-.mona-notification {
+.mona-notification-wrapper {
     width: 350px;
     min-height: 80px;
     overflow: hidden;
@@ -11,13 +11,13 @@
     box-shadow: var(--mona-popup-shadow);
 }
 
-div.mona-notification-inner {
+.mona-notification-inner {
     display: flex;
     flex: 1;
     padding: 10px;
 }
 
-div.mona-notification-line {
+.mona-notification-line {
     width: 2px;
     display: flex;
     &-success {
@@ -34,7 +34,7 @@ div.mona-notification-line {
     }
 }
 
-div.mona-notification-icon {
+.mona-notification-icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -53,7 +53,7 @@ div.mona-notification-icon {
     }
 }
 
-div.mona-notification-actions {
+.mona-notification-actions {
     height: 100%;
     display: flex;
     align-items: center;
@@ -63,13 +63,13 @@ div.mona-notification-actions {
     }
 }
 
-div.mona-notification-content-wrapper {
+.mona-notification-content-wrapper {
     display: flex;
     flex-direction: column;
     flex: 1;
 }
 
-div.mona-notification-header {
+.mona-notification-header {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -80,18 +80,18 @@ div.mona-notification-header {
     user-select: none;
 }
 
-div.mona-notification-content {
+.mona-notification-content {
     display: flex;
     width: 100%;
     flex: 1;
     align-items: center;
 }
 
-div.mona-notification-text {
+.mona-notification-text {
     color: var(--mona-text);
 }
 
-div.mona-notification-progress {
+.mona-notification-progress {
     width: 100%;
     height: 1px;
 }
